--- a/media/src/main/res/values-tr-rTR/strings.xml
+++ b/media/src/main/res/values-tr-rTR/strings.xml
@@ -38,7 +38,7 @@
     <string name="select_puzzle_photos">Lütfen 2 \- 9 fotoğraf seçin</string>
     <string name="gif_easy_photos">GIF</string>
     <string name="video_easy_photos">video</string>
-    <string name="max_select_notice">你最多只能选择%d个图片或视频</string>
-    <string name="i_got_it">我知道了</string>
-    <string name="video_over_limit_notice">无法发送超过1GB的原视频,请重新选择</string>
+    <string name="max_select_notice">Yalnızca %d\'ye kadar resim veya video seçebilirsiniz</string>
+    <string name="i_got_it">Biliyorum</string>
+    <string name="video_over_limit_notice">Orijinal video 1 GB\'den büyük gönderilemez, lütfen tekrar seçin</string>
 </resources>
