--- a/media/src/main/res/values/strings.xml
+++ b/media/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AlbumMedia</string>
+    <string name="app_name" translatable="false">AlbumMedia</string>
     <string name="selector_folder_all_easy_photos">所有图片</string>
     <string name="selector_folder_all_video_photo_easy_photos">图片和视频</string>
     <string name="selector_folder_video_easy_photos">所有视频</string>
