--- a/media/src/main/res/values/strings.xml
+++ b/media/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="permissions_again_easy_photos">请点击并允许相关权限</string>
     <string name="permissions_die_easy_photos">请点击并在设置中允许相关权限</string>
     <string name="original_easy_photos">原图</string>
-    <string name="preview_current_number_easy_photos">%1$d/%2$d</string>
+    <string name="preview_current_number_easy_photos" translatable="false">%1$d/%2$d</string>
     <string name="done_easy_photos">完成</string>
     <string name="cancel_easy_photos">取消</string>
     <string name="template_easy_photos">模板</string>
